# radar-escola

./: .dockerignore  .gitignore  .markdownlint.json  CI_CD_OSS.md  CONTEXTO_INICIAL.md  CONTRIBUTING.md  DETALHAMENTO_BLOCOS_TRANSVERSAIS_V0.md  DETALHAMENTO_BLOCOS_TRANSVERSAIS_V1.md  DETALHAMENTO_REQUISITOS_V0.md  DETALHAMENTO_REQUISITOS_V1.md  Dockerfile.dev  ESCOPO_V0.md  FLUXO_E2E_V0.md  FUNDADOR_TOCANDO_PRODUTO.md  GUARDRAILS_V0.md  GUIA_ESPECIFICACAO_EXECUTAVEL_V1.md  MATRIZ_ISSUES_V1.md  PLANO_DOCKERIZACAO_AMBIENTE.md  PROJETO_DOCKERIZACAO_AMBIENTE.md  README.md  REGRAS_DE_DOMINIO_V1.md  REQUISITOS_V0.md  VISAO_PROTOTIPAL_V0.md  VISAO_PROTOTIPAL_V1.md  index.html  package-lock.json  package.json  playwright.config.mjs  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  contributor-thanks.md  dependabot.yml
.github/ISSUE_TEMPLATE/: ci-cd.yml  config.yml  validacao-documentacao.yml
.github/workflows/: ci.yml  (+5 more)
docs/: architecture.md  ci.md  desktop-release.md  development-docker.md  final-testable-delivery.md  implementation-plan.md  implementation-status.md  oss-guardrails.md  permissions.md  project-context.md  roadmap.md
e2e/: playground-crud.spec.mjs  radar-mvp-flow.spec.mjs
scripts/: smoke-windows.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_mvp.sql
src-tauri/src/: README.md  main.rs  playground.rs  radar.rs
tests/: migrations.test.mjs  playgroundCrud.test.mjs  playgroundRepository.test.mjs  radarDomain.test.mjs  radarRepository.test.mjs
(+26 files in other folders)
